--- a/20230219_Python_03_作業.ipynb
+++ b/20230219_Python_03_作業.ipynb
@@ -10,13 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b5b4da85",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 一、\n",
-    "## 請用 for 列出從 1 至 9 的九九乘法表"
+    "## 請用 for 列出從 1 至 9 的九九乘法表\n",
+    "## 提示：巢狀結構"
    ]
   },
   {
@@ -55,10 +56,10 @@
     "##       *******\n",
     "##      *********\n",
     "##     ***********\n",
-    "##         **\n",
-    "##         **\n",
-    "##         **\n",
-    "##         **"
+    "##         ***\n",
+    "##         ***\n",
+    "##         ***\n",
+    "##         ***"
    ]
   },
   {
@@ -77,7 +78,18 @@
    "outputs": [],
    "source": [
     "# 三、\n",
-    "## "
+    "## 請以你所學，完成模擬 sorted function 的運作原理。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29c9730b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = [2,43,56,3,6,6,6,3,-3,10,0]\n",
+    "# output = [-3,0,2,3,3,6,6,6,10,43,56]"
    ]
   }
  ],
