0318: update class 05 code

--- a/20230308_Python_04.ipynb
+++ b/20230308_Python_04.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5b2085a0",
    "metadata": {},
    "outputs": [],
@@ -176,12 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "76580839",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pic = open(\"C:/Users/SEFx4/Desktop/upload-picture.jpg\",mode=\"rb\")"
+    "pic = open(\"C:/Users/SEFx4/Desktop/file-upload.png\",mode=\"rb\")"
    ]
   },
   {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dee588aa",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "54acfef0",
    "metadata": {},
    "outputs": [],
@@ -219,22 +219,64 @@
     "    \"https://ap3.ragic.com/LloydsIncuranceAgency/forms16/53/8\",\n",
     "    headers=headers,\n",
     "    files=[\n",
-    "        (\"1004456\",(\"upload-picture.jpg\",open(\"C:/Users/SEFx4/Desktop/upload-picture.jpg\",mode=\"rb\"),'application/pdf'))\n",
+    "        (\"1004456\",(\"file-upload.png\",open(\"C:/Users/SEFx4/Desktop/file-upload.png\",mode=\"rb\"),'application/pdf'))\n",
     "    ]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "10f5d513",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'status': 'SUCCESS',\n",
+       " 'msg': '&nbsp;',\n",
+       " 'ragicId': 8,\n",
+       " 'rv': '\\u3000',\n",
+       " 'data': {'_ragicId': 8,\n",
+       "  '_star': False,\n",
+       "  '_update_date': '2023/03/17 20:46:50',\n",
+       "  '_create_date': '2023/03/15 14:50:25',\n",
+       "  '_create_user': 'sefx5ever@gmail.com',\n",
+       "  '109': '2023/03/17 20:46:50',\n",
+       "  '105': '2023/03/15 14:50:25',\n",
+       "  '108': 'sefx5ever@gmail.com',\n",
+       "  '1004447': '景順美國價值股票基金A股 美元',\n",
+       "  '_index_title_': '景順美國價值股票基金A股 美元',\n",
+       "  '1004448': 'B16191',\n",
+       "  '1004449': '-0.12%',\n",
+       "  '1004450': '5.84%',\n",
+       "  '1004451': '-0.49%',\n",
+       "  '1004452': '18.85%',\n",
+       "  '1004453': '50.67%',\n",
+       "  '1004456': ['',\n",
+       "   '76jItFIrJo@upload-picture.jpg',\n",
+       "   'vW42n0O6m7@file-upload.png'],\n",
+       "  '_index_': ''}}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "resp_ragic.json()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d07a0be3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
